force-app/main/default/objects/pse__Version_Config__c/pse__Version_Config__c.object-meta.xml
<CustomObject>
    <description>Holds the configs Baseline and Versioning customisation.</description>
    <label>Version Config</label>
    <nameField>
        <label>Version Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Version Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>