force-app/main/default/objects/pse__Version_Config__c/fields/pse__Capture_Config__c.field-meta.xml
<CustomField>
    <fullName>pse__Capture_Config__c</fullName>
    <description>The fields to include in a project version. Content is stored as JSON code strings.</description>
    <inlineHelpText>This field is reserved for future development. Do not use.</inlineHelpText>
    <label>Fields To Include</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>