force-app/main/default/objects/pse__Version_Config__c/fields/pse__Default__c.field-meta.xml
<CustomField>
    <fullName>pse__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines the default Version Config object as configured to capture objects and fields when creating project baselines and versions. Only one Version Config object can be set as the default.</description>
    <inlineHelpText>Determines the default Version Config object as configured to capture objects and fields when creating project baselines and versions. Only one Version Config object can be set as the default.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>